[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.3", features = ["sqlite", "chrono", "runtime-tokio-native-tls"] }
tokio = { version = "1.0", features = ["full"] }
macros = { path = "../macros" }
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }